mini_tales/static/css/style.css
/* ... */
.edit-delete{
    color: var(--base-text);
    font-weight: 700;
    width: 100%;
    margin: auto;
    text-decoration: none;
    padding: 5px;
    border: 2px solid var(--off-white); 
    border-radius: 5px;  
    background-color: var(--button-bg);
    box-shadow: 0 2px var(--box-shadows);
}
.edit-delete:hover{
    background-color: var(--off-white);
    border-color: var(--button-bg);
}
.fulltale-publish-date{
    float: right;
    font-size: 75%;
}
.fulltale-views-likes{
    display: flex;    
    justify-content: space-around;
    background-color: var(--off-white);
    border: 2px solid var(--base-border);
    border-radius: 5px;
    width: 100%;
    padding: 5px;
    margin: 20px 0 10px 0;
}
.fulltale-views-likes div{
    margin: 5px 20px 5px 20px;
}
.fulltale-views{ 
    border-radius: 2px; 
    margin: 1px;
}
.fulltale-views svg{
    margin-right: 5px;
}
.fulltale-likes{
    border-radius: 2px; 
    margin-left: 1px;
    margin-right: 3px;
}
.fulltale-likes a{
    text-decoration: none;
    color: var(--base-text);
}
.fulltale-likes svg{
    margin-right: 5px;
}
.liked{
    color: var(--flashes);
}
.fulltale-content{
    background-color: var(--off-white);
    border: 2px solid var(--base-border);
    border-radius: 5px;
    padding: 15px;
    text-align: left;
    width: 100%;
    margin: 10px 0 10px 0;
}

/* New Tale Section*/
.newtale-link{
    display: flex;    
    flex-direction: column;
    align-items: center;
    margin: auto;
}
.newtale-link a{    
    color: var(--base-text);
    font-weight: 700;
    text-decoration: none;
    width: 50%;
    padding: 2px;
    margin: 5px;
    border: 2px solid var(--off-white); 
    border-radius: 5px;  
    background-color: var(--button-bg);
}
.newtale-link a:hover{
    background-color: var(--off-white);
    border-color: var(--button-bg);
}
.newtale-form-section{
    display: flex;    
    flex-direction: column;
    align-items: center;
}
.newtale-form{
    width: 100%;
}
.newtale-form-section p{
    margin: 10px;
    font-size: 125%;
    color: var(--off-white-text);
    text-shadow: 0 2px 5px var(--text-shadows);   
}
.newtale-form-section label{
    color: var(--off-white-text);
    text-shadow: 0 2px 5px var(--text-shadows);    
    font-size: large;
    font-weight: 700;
    margin: 20px;
}
.tale-form-inputs{
    margin: 5px;
}
.tale-form-inputs input{
    border: 2px solid var(--base-border);
    border-radius: 10px;
    background-color: var(--off-white);
    padding: 7.5px 15px 7.5px 15px;
    width: 80%;    
    box-shadow: 0 2px var(--box-shadows);
}
.tale-form-inputs select{
    border: 2px solid var(--base-border);
    border-radius: 10px;
    background-color: var(--off-white);
    padding: 7.5px 15px 7.5px 15px;
    width: 80%;    
    box-shadow: 0 2px var(--box-shadows);
}
.tale-form-submit input{
    color: var(--base-text);
    font-size: large;
    font-weight: 700;
    border: 2px solid var(--off-white);
    border-radius: 10px;
    background-color: var(--button-bg);
    padding: 7.5px 15px 7.5px 15px;
    width: 80%;
    margin: 10px;
    box-shadow: 0 2px var(--box-shadows);
}
.tale-form-submit input:hover{
    background-color: var(--off-white);
    border-color: var(--button-bg);
}
.tale-blurb{
    border: 2px solid var(--base-border);
    border-radius: 10px;
    background-color: var(--off-white);
    padding: 7.5px 15px 7.5px 15px;
    width: 80%;
    height: 200px;    
    box-shadow: 0 2px var(--box-shadows);
}
.tale-content{
    border: 2px solid var(--base-border);
    border-radius: 10px;
    background-color: var(--off-white);
    padding: 7.5px 15px 7.5px 15px;
    width: 80%;
    height: 600px;
    box-shadow: 0 2px var(--box-shadows);
}

/* Edit Tale Section*/
.edittale-form-section{
    display: flex;    
    flex-direction: column;
    align-items: center;
}
.edittale-form{
    width: 100%;
}
.edittale-form-section p{
    width: 80%;
    margin: 10px;
    font-size: 125%;
    color: var(--off-white-text);
    text-shadow: 0 2px 5px var(--text-shadows);    
}
.edittale-form-section label{
    color: var(--off-white-text);
    text-shadow: 0 2px 5px var(--text-shadows);    
    font-size: large;
    font-weight: 700;
}
.delete{
    color: var(--base-text);
    font-weight: 700;
    width: 80%;
    text-decoration: none;
    padding: 5px;
    margin: 5px 0 10px 0;
    border: 2px solid var(--off-white); 
    border-radius: 5px;  
    background-color: var(--flashes);
    box-shadow: 0 2px var(--box-shadows);
}
.delete:hover{
    background-color: var(--off-white);
    border-color: var(--flashes);
}

/* Delete Tale Section*/
.delete-section{
    display: flex;    
    flex-direction: column;
    align-items: center;    
}
.delete-choices{
    display: flex;    
    flex-direction: column;
    align-items: center;  
    width: 100%;
}
.delete-section p{
    width: 80%;
    margin: 20px;
    font-size: 125%;
    font-weight: 700;
    color: var(--off-white-text);
    text-shadow: 0 2px 5px var(--text-shadows);   
}
.delete-choices div{     
    font-size: large;
    font-weight: 700;
    padding: 10px;
    border: 2px solid var(--off-white);  
    border-radius: 5px;
    margin: 10px;
    width: 60%;
}
.delete-choices a{
    text-decoration: none;    
}
.delete-cancel{
    background-color: var(--button-bg);      
}
.delete-cancel:hover{
    background-color: var(--off-white);
    border-color: var(--button-bg);
}
.delete-cancel a{
    color: var(--base-text);    
}
.delete-confirm{
    background-color: var(--flashes);
}
.delete-confirm a{
    color: var(--base-text);    
}
.delete-confirm:hover{
    background-color: var(--off-white);
    border-color: var(--flashes);
}

/* Login Section*/
.user-form-section{
    display: flex;    
    flex-direction: column;
    align-items: center;   
}
.login-form{
    width: 100%;
}
/* ... */

